--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,10 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="purple_200">#FFBB86FC</color>
-    <color name="purple_500">#FF6200EE</color>
-    <color name="purple_700">#FF3700B3</color>
-    <color name="teal_200">#FF03DAC5</color>
-    <color name="teal_700">#FF018786</color>
-    <color name="black">#FF000000</color>
+    <color name="red">#FFFF7474</color>
+    <color name="purple">#FF546EE5</color>
+    <color name="grey">#FF696D74</color>
+    <color name="black">#FF1D2027</color>
     <color name="white">#FFFFFFFF</color>
 </resources>
